Bug 169922 - Page line-spacing is not applied properly on text after removing page
Summary: Page line-spacing is not applied properly on text after removing page
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.3.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:26.8.0
Keywords:
Depends on:
Blocks: Page-Layout-Columns
  Show dependency treegraph
 
Reported: 2025-12-10 09:35 UTC by Tamás Zolnai
Modified: 2026-01-23 10:30 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Test document to reproduce the problem (47.56 KB, application/vnd.oasis.opendocument.text)
2025-12-10 09:36 UTC, Tamás Zolnai
Details
Screen recording of the issue (3.82 MB, video/mp4)
2025-12-10 11:48 UTC, Tamás Zolnai
Details
Screen recording of the issue with baseline grid shown (2.90 MB, video/mp4)
2025-12-16 11:28 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2025-12-10 09:35:47 UTC
Description:
I noticed that when I use page line spacing in a multipage document, the text formatting sometimes breaks when I remove some pages.

I have a document with page line-spacing enabled on all pages, and when I remove a page, the other pages after the removed page have the wrong vertical text alignment.

Steps to Reproduce:
1. Open the attached test document (3-page document).
2. Switch to multipage view (View -> Page Layout -> Multiple Pages per Row).
3. Set zoom level to 55%.
4. Click on the second (empty) page and remove it by pressing backspace.
-> Second page is removed. The two subtitle lines on the new second page are not aligned properly vertically. Compare it to the first page with the same content.
5. Click on one of the subtitle lines of the second page and type any character.
-> Both subtitle lines jump to the correct vertical position.

Actual Results:
After removing a page, some text is not aligned properly on later pages.

Expected Results:
After removing a page, text alignment should be properly updated following the page line-spacing settings.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.3.2 (X86_64) / LibreOffice Community
Build ID: 580(Build:2)
CPU threads: 4; OS: Linux 6.16; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Tamás Zolnai 2025-12-10 09:36:22 UTC
Created attachment 204558 [details]
Test document to reproduce the problem
Comment 2 Tamás Zolnai 2025-12-10 11:48:00 UTC
Created attachment 204559 [details]
Screen recording of the issue

In the screen recording, I used a small window as a ruler to show how the vertical alignment of the subtitles is changing compared to the first page positioning.
Comment 3 Tamás Zolnai 2025-12-16 11:28:56 UTC
Created attachment 204670 [details]
Screen recording of the issue with baseline grid shown

There is a new feature called "Baseline Grid" in LibreOffice 26.8 (master, unreleased). This baseline grid feature displays the grid for the page line-spacing feature. Text with page line-spacing is expected to be aligned with this baseline grid. So with this grid being shown, it's easier to see the issue with the text rendering.
Comment 4 Commit Notification 2026-01-23 10:30:13 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/39018ea836bb73862a9fa509f375ee88750dc93f

tdf#169922: Apply page line-spacing properly after removing a page.

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.