tdf#169922: Apply page line-spacing properly after removing a page.

The invalidation code tries to minimise what needs to be recalculated
and reformatted in specific scenarios when a text frame is modified.

In this case, the code attempted to calculate the new line height
determined by the page line-spacing using invalid frame area.
When we don't have valid frame print area information, we can't
compute the new text alignment incrementally, so a full reformat
is required instead.

Change-Id: I8c86bc4c2fd5661f11fab339d6eb7cf57c396a91
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197798
Reviewed-by: Tamás Zolnai <zolnaitamas2000@gmail.com>
Tested-by: Jenkins